# mint-app

./: .air.conf  .air.toml  .airDebug.conf  .airDebugWait.conf  .cursorrules  .dockerfilelintrc  .dockerignore  .editorconfig  .envrc  .eslintrc  .gitignore  .golangci.yml  .pnp.cjs  .pre-commit-config.yaml  .spelling  .sqlfluff  .yarnrc.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.client  Dockerfile.client_ci  Dockerfile.cypress  Dockerfile.db_clean  Dockerfile.db_migrations  Dockerfile.db_seed  Dockerfile.faktory  Dockerfile.frontend  GEMINI.md  LLMS.txt  MINT.postman_collection.json  README.md  apollo.config.js  codegen.ts  convert-useHistory.js  craco.config.js  cypress.config.ts  cypress.json  docker-compose.backend.yml  docker-compose.ci_server_test.yml  (+32 more)
.ai/: ARCHITECTURE.md  CODING_STYLE.md  REVIEW_GUIDELINES.md  TESTING_RULES.md
.gemini/: config.yaml
.github/: CODEOWNERS  COPILOT_INSTRUCTIONS.md  COPILOT_REVIEW.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  (+1 more)
mcp/: .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  GRAPHQL_VALIDATION.md  Makefile  OPENWEBUI.md  QUICKSTART.md  README.md  docker-compose.yml  graphql.config.json  inspector.sh  pyproject.toml  quickstart.sh  start.sh  start_docker.sh  start_openwebui.sh  stop_all.sh  stop_openwebui.sh
mcp/docs/: AUTHENTICATION.md
mcp/mcpserver/: __init__.py  __init__.pyi  config.py  config.pyi  mint_client.py  mint_client.pyi  server.py
mcp/mcpserver/queries/: EXAMPLE_NEW_DOMAIN.py  __init__.py  analytics.py  model_plans.py  resources.py
mcp/tests/: __init__.py  test_server.py
(+8444 files in other folders)
